Fix bugs (scrollbar) and delete unnecessary image file

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,8 +24,8 @@ $project-pink: #ed145b;
 $website-grey: #5a5a5a;
 
 body {
-	margin:0;
-
+	margin: 0;
+	overflow: auto;
 }
 
 body {
@@ -80,7 +80,10 @@ body {
 	}
 
 	* {
-	box-sizing: border-box;
+			box-sizing: border-box;
+			margin: 0;
+			padding: 0;
+			outline: none;
 	}
 }
 
@@ -245,13 +248,15 @@ $desktop_large: "(min-width: 1920px)";
 	background-color: $project-pink;
 	transform: rotate(-0.7deg) scale(1.1) translate(0, -10px);
 	z-index: -1;
+	overflow: hidden;
 }
 
 .about {
 	width: 100%;
-	height: 430px;
+	height: auto;
 	background-color: #fff;
 	margin-top: 85px;
+	overflow: hidden;
 }
 .row {
 	@include clearfix;
@@ -386,6 +391,7 @@ $desktop_large: "(min-width: 1920px)";
 .services {
 	width: 100%;
 	height: 400px;
+	overflow: hidden;
 }
 .services {
 	.services_description  {
@@ -447,7 +453,7 @@ $desktop_large: "(min-width: 1920px)";
 .quotes {
 	width: 100%;
 	height: 501px;
-	margin-bottom: 200px;
+	overflow: hidden;
 	.quotes_content {
 		width: 100%;
 		height: 501px;
@@ -578,6 +584,7 @@ $desktop_large: "(min-width: 1920px)";
 	width: 100%;
 	height: 1016px;
 	background-color: #f4f4f4;
+	overflow: hidden;
 }
 .prices {
 	.prices_description  {
@@ -786,6 +793,7 @@ $desktop_large: "(min-width: 1920px)";
 	height: 400px;
 	margin-top: 120px;
 	margin-bottom: 120px;
+	overflow: hidden;
 }
 .description {
 	.description_table {
@@ -817,6 +825,7 @@ $desktop_large: "(min-width: 1920px)";
 	justify-content: center;
 	align-items: center;
 	background-color: $project-pink;
+	overflow: hidden;
 }
 .rectangle {
 	.rectangle_table {
@@ -868,7 +877,8 @@ $desktop_large: "(min-width: 1920px)";
 		display: flex;
 		justify-content: center;
 		align-items: center;
-			flex-direction: column;
+		flex-direction: column;
+		overflow: hidden;
 	}
 	.updates {
 		div {
@@ -1075,6 +1085,7 @@ $desktop_large: "(min-width: 1920px)";
 	.download {
 		width: 100%;
 		height: 754px;
+		overflow: hidden;
 	}
 	.download {
 		.row {
@@ -1134,6 +1145,7 @@ $desktop_large: "(min-width: 1920px)";
 		color: #fff;
 		display: flex;
 		align-items: center;
+		overflow: hidden;
 	}
 	.footer {
 		.row {
